Modeify: clean source